CHANGES IN VERSION 0.99.7
------------------------
* Integration of Ibex with immApex
* Update Seurat object to v5
* Update ```CoNGAfy()``` to function with all versions of Seurat
* Updated ```quietBCRgenes()``` to used VariableFeatures() call


CHANGES IN VERSION 0.99.6
------------------------
* Implementing GitHub action workflows
* Adding testthat framework 
* Deprecating clonalCommunity 

CHANGES IN VERSION 0.99.5
------------------------
* Added geometric encoding using the BLOSUM62 matrix
* Trained classical and variational autoencoders for light/heavy chains with 1.5 million cdr sequences
 	- Architecture: 256-128-30-128-256
	- Parameters: 
		Batch Size = 64
		Latent Dimensions = 30
		Epochs = 100
		Loss = Mean Squared Error
	- Optimizers: Adam
	- Early stopping was set to patients of 10 for minimal validation loss and restoration of best weights
	- learn rate varied by models
	- classical auto encoders have batch normalization layers between the dense layers. 
    


CHANGES IN VERSION 0.99.4
------------------------
* Added chain.checker() function to allow for uncapitlized chain calls

CHANGES IN VERSION 0.99.3
------------------------
* Updated models for manuscript revision
 	- Architecture: 256-128-30-128-256
	- Parameters: 
		Batch Size = 64
		Learning Rate = 0.001
		Latent Dimensions = 30
		Epochs = 50
		Loss = Mean Squared Error
	- Optimizers: RAdam (for amino acid properties) and RMSprop (for OHE)
	- Early stopping was set to patients of 10 for minimal validation loss and restoration of best weights


CHANGES IN VERSION 0.99.2
------------------------
* Updated models to include radam optimization, early stop for min 10 epochs, and all trained on 800,000 unique cdr3s
* quietBCRgenes() now does not remove human Ig pseudogenes


CHANGES IN VERSION 0.99.1
------------------------
* Added detection of chain length to function call
* Added support for direct output of combineBCR()
* Modified quietBCR() to include constant regions and J-chains

